Fix overflow on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,7 +23,6 @@ a:hover {
 .row {
     display: flex;
     flex-direction: row;
-    width: 100%;
     padding: 10px;
 }
 
